<resources>
    <string name="app_name">Karebo</string>
    <string name="title_activity_drawer">Drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Kaushal Jethava</string>
    <string name="nav_header_subtitle">kaushaljethava12@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_about">About</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_question">SHEQ</string>
    <string name="menu_otp">PIN </string>
    <string name="menu_meteraudit">Meter Position</string>
    <string name="menu_accessstatus">Access Status</string>
    <string name="menu_meterinformation">Meter Information</string>
    <string name="menu_meterlocation">Meter Location</string>
    <string name="menu_barcodescan">Barcode Scan</string>
    <string name="menu_auditphoto">Meter Photo</string>
    <string name="menu_tipprocessone">TID Process</string>
    <string name="menu_occupancy">Occupancy</string>
    <string name="menu_triptest">Trip Test</string>
    <string name="menu_customerfeedback">Customer Feedback</string>
    <string name="menu_signature">Customer Signature</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="toolbox">
        <item>STIHL Master ToolBox</item>
        <item>STIHL Master ToolBox</item>
        <item>STIHL Master ToolBox</item>
    </string-array>

    <string-array name="access">
        <item>Access Status</item>
        <item>No Access</item>
        <item>Full Access</item>
        <item>Access Denied</item>
        <item>Access Denied : Covid</item>
    </string-array>

    <string-array name="metercount">
        <item>None</item>
        <item>One</item>
        <item>Many</item>

    </string-array>


    <string-array name="code">
        <item>5649</item>
        <item>3153</item>
        <item>7254</item>
        <item>5031</item>
        <item>3471</item>
    </string-array>



    <string-array name="question">
        <item>yes</item>
        <item>no</item>


    </string-array>

    <string-array name="krn">
        <item>Select krn</item>
        <item>1</item>
        <item>2</item>


    </string-array>

    <string-array name="submeter">
        <item>Select Submeter</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>

    <string-array name="mapmarker">
        <item>Pole</item>
        <item>Kiosk</item>
    </string-array>

    <string-array name="powerlimit">
        <item>0</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
        <item>35</item>
        <item>40</item>
        <item>45</item>
        <item>50</item>
        <item>55</item>
        <item>60</item>
        <item>65</item>
        <item>70</item>
        <item>75</item>
        <item>80</item>
        <item>85</item>
        <item>90</item>
        <item>85</item>
        <item>100</item>


    </string-array>

    <string-array name="meterstatus">
        <item>Meter Status</item>
        <item>Working</item>
        <item>not Working</item>


    </string-array>
    <string-array name="metercode">
        <item>Meter Code</item>
        <item>A</item>
        <item>B</item>
        <item>C</item>

    </string-array>


    <string-array name="sitetype">
        <item>Site Type</item>
        <item>Business</item>
        <item>Empty House/Building</item>
        <item>Empty Plot</item>
        <item>Formal Home</item>
        <item>Holiday Home</item>
        <item>Informal Home</item>
        <item>No Electricity</item>

    </string-array>
</resources>